ciwac-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: ciwac-backend
    app.kubernetes.io/instance: ciwac-backend-instance
    app.kubernetes.io/version: '1.0.0'
    app.kubernetes.io/managed-by: kubectl
  name: ciwac-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ciwac-backend
  template:
    metadata:
      labels:
        app: ciwac-backend
    spec:
      containers:
        - image: ledger/ciwac_backend:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 100m
              memory: 200M
          name: ciwac-backend
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: regcred
