ciwac-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: ciwac-frontend
    app.kubernetes.io/instance: ciwac-frontend-instance
    app.kubernetes.io/version: '1.0.0'
    app.kubernetes.io/managed-by: kubectl
  name: ciwac-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ciwac-frontend
  template:
    metadata:
      labels:
        app: ciwac-frontend
    spec:
      containers:
        - image: ledgerapp/ciwac_frontend:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 100m
              memory: 200M
          name: ciwac-frontend
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
