ciwac-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: ciwac-backend
    app.kubernetes.io/instance: ciwac-backend-instance
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: backend
    app.kubernetes.io/managed-by: kubectl
  name: ciwac-backend
spec:
  type: ClusterIP
  selector:
    app: ciwac-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
