ciwac-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ciwac-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: Environment=Prod
    #alb.ingress.kubernetes.io/ingress.allow-http: "false" # disable HTTP
    alb.ingress.kubernetes.io/backend-protocol: "HTTP"
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    #CORS
    alb.ingress.kubernetes.io/enable-cors: "true"
    alb.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    alb.ingress.kubernetes.io/cors-allow-origin: "https://ciwac.com"
    alb.ingress.kubernetes.io/cors-allow-credentials: "true"
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    # ssl certificate
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
spec:
  tls:
  - hosts:
    -  ciwac.com
    secretName: origin-ca-key
  - hosts:
    -  tanour.ciwac.com
    secretName: origin-ca-key
  - hosts:
    -  api.ciwac.com
    secretName: origin-ca-key
  - hosts:
    -  api.niwac.cn
    secretName: origin-ca-key
  rules:
  - host: ciwac.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ciwac-frontend
            port: 
              number: 80
  - host: tamour.ciwac.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ciwac-frontend
            port: 
              number: 80
  - host: api.ciwac.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ciwac-backend
            port: 
              number: 80
  - host: api.hiwac.cn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: niwac-backend
            port: 
              number: 80
  - host: tempapi.ciwac.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: niwac-backend
            port: 
              number: 80
